change to capital letter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet",type="text/css"href="index.css">
     </head>
     <body>
-        <h1>I am the main heading</h1>
+        <h1>I Am the main heading</h1>
         <h2>I am the subheading</h2>
         <h3>I am another subheading</h3>
         <h4>Iam yet another subheading</h4>
